discord-bot/src/test/resources/cocos/guild/invalid/RoleGroupEntriesAreUnique.gld
configuration 12345L {
    prefix "prefix"
    blacklist "expression"
    subreddit "x" {
        channel : 0L
    }
    selfassignable "c" {
        role : 9L
    }
    selfassignable "d" {
        role : 9L
    }
}
